--- a/project one.html
+++ b/project one.html
@@ -225,7 +225,7 @@ Student experience journey map captures the typical streamlined journey from acc
 
     <div class="workshopPhoto col-lg-6">
 
-      <img class="serviceDesign-img" src="images/workshop2.png" alt="iphone-mockup">
+      <img class="serviceDesign-img" src="images/Workshop3.png" alt="iphone-mockup">
 
       <p class="colored-section imageAnnotation subtitle "> &#8593; CO-DESIGN WORKSHOP</p>
     </div>
